--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frases</title>
+    <title>Phrases</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,10 +13,11 @@
 <body>
     <div class="container">
         <div class="frase-container">
-            <span class="emoji">&#128170; &#128154;</span>
+            <span class="emoji">🙂💪</span>
             <p class="frase">
-                No basta con saber. La acción es lo que produce los resultados.
+               
             </p>
+            <span class="type">Finance</span>
         </div>
     </div>
    
