--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 <body>
     <div class="container">
         <div class="frase-container">
-            <span class="emoji">🙂💪</span>
+            <span class="emoji">🙂💲💪</span>
             <p class="frase">
                
             </p>
-            <span class="type">Finance</span>
+            <span class="type"></span>
+            <span class="number">#25</span>
         </div>
     </div>
    
-<script src="js/script.js"></script>
+<script src="js/script.js" type="module"></script>
 </body>
 
 </html>
