--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
     <div class="container">
         <div class="frase-container">
-            <span class="emoji">🙂💲💪</span>
+            <span class="number">#25</span>
             <p class="frase">
                
             </p>
             <span class="type"></span>
-            <span class="number">#25</span>
+            
+            <div class="shadow"></div>
         </div>
     </div>
    
